--- a/python/miniblog/requirements.txt
+++ b/python/miniblog/requirements.txt
@@ -4,9 +4,13 @@ atpublic==5.0
 attrs==24.2.0
 babel==2.16.0
 blinker==1.8.2
+certifi==2024.8.30
+charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 dnspython==2.6.1
+elastic-transport==8.15.1
+elasticsearch==8.15.1
 email_validator==2.2.0
 Flask==3.0.3
 flask-babel==4.0.0
@@ -20,13 +24,17 @@ greenlet==3.0.3
 idna==3.8
 itsdangerous==2.2.0
 Jinja2==3.1.4
+langdetect==1.0.9
 Mako==1.3.5
 MarkupSafe==2.1.5
 packaging==24.1
 PyJWT==2.9.0
 python-dotenv==1.0.1
 pytz==2024.1
+requests==2.32.3
+six==1.16.0
 SQLAlchemy==2.0.32
 typing_extensions==4.12.2
+urllib3==2.2.3
 Werkzeug==3.0.3
 WTForms==3.1.2
